[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "spendguard-sdk"
version = "0.5.1"
description = "SpendGuard SDK ŌĆö runtime safety layer client for AI agent frameworks (Pydantic-AI, LangChain, LangGraph, OpenAI Agents SDK). SLICE_12: default token estimators + with_run_plan decorator (Signal 3)."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [
  { name = "Michael Chen", email = "m24927605@gmail.com" },
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: Apache Software License",
  "Topic :: Software Development :: Libraries",
  "Development Status :: 4 - Beta",
  "Operating System :: POSIX :: Linux",
  "Operating System :: MacOS",
]

# Core deps: the SpendGuardClient + proto stubs only. Framework deps
# are gated behind extras so a user who only writes raw OpenAI SDK code
# doesn't pull in pydantic-ai / langchain / etc.
#
# SLICE_12: `tiktoken` and `tokenizers` are CORE deps, not extras ŌĆö
# the default `claim_estimator` in every integration uses them for
# any OpenAI / Anthropic / Gemini model. Skipping them would force
# every adapter user to supply a manual estimator (regression vs 0.4.0
# where `claim_estimator` was a required parameter; users were
# building chars/4 stubs by hand). Both deps are <1MB each.
dependencies = [
  "grpcio>=1.62",
  "protobuf>=4.25,<6",
  "pydantic>=2.6",
  "tiktoken>=0.6,<1.0",
  "tokenizers>=0.20,<1.0",
]

[project.optional-dependencies]
pydantic-ai = [
  # CVE-2026-25580 affects pydantic-ai/pydantic-ai-slim before
  # 1.56.0. As of 2026-06-02, PyPI does not expose a fixed
  # pydantic-ai>=1.56.0 release to this resolver, so keep the extra
  # fail-closed instead of installing known-vulnerable 0.x packages.
  # The integration module still works when operators provide a vetted,
  # non-vulnerable pydantic-ai release in their environment.
]
langchain = [
  "langchain-core>=0.3",
  "langchain>=0.3",
]
langgraph = [
  "langchain-core>=0.3",
  "langgraph>=0.2",
]
openai-agents = [
  "openai-agents>=0.17",
]
# COV_D19 SLICE_1: Google ADK Python adapter extra. `google-adk` 1.x
# is the GA line shipping `LlmAgent` + `before_model_callback` /
# `after_model_callback`. Cap below 2.x to fail-closed against a
# future breaking-change major. See
# `docs/specs/coverage/D19_google_adk/design.md` ┬¦5.
adk = [
  "google-adk>=1.0,<2",
]
# COV_D20 SLICE_1: AWS Strands Agents SDK extra. `strands-agents` 1.x is
# the GA line shipping `HookProvider.register_hooks(registry)` with
# `BeforeInvocationEvent` / `AfterInvocationEvent`. Cap below 2.x to
# fail-closed against a future breaking-change major. See
# `docs/specs/coverage/D20_aws_strands/design.md` ┬¦5. The hook layer
# is model-agnostic so the same provider gates Bedrock + OpenAI +
# Anthropic + Gemini + Ollama + LiteLLM backends identically.
strands = [
  "strands-agents>=1.0,<2",
]
# COV_D21 SLICE 1: DSPy Python adapter extra. ``dspy-ai`` >=2.6 ships
# the GA ``BaseCallback`` (``on_lm_start`` / ``on_lm_end``) with stable
# UUID ``call_id`` semantics; earlier 0.x releases used
# ``dspy.functional`` wrappers that did not fire per LM call. Cap below
# 3.x to fail-closed against a future breaking-change major. The
# integration also coexists with D12 (LiteLLM SDK shim) via the shared
# ``spendguard._litellm_shim._IN_FLIGHT`` contextvar.  See
# ``docs/specs/coverage/D21_dspy/design.md`` ┬¦5.
dspy = [
  "dspy-ai>=2.6,<3.0",
]
# COV_D07 SLICE_05: Microsoft Agent Framework (MAF) v1 GA extra. The
# `agent-framework` umbrella package re-exports everything from
# `agent-framework-core` (chat client + middleware contracts) so
# the standard install path matches the design.md ┬¦3.4 install hint
# `pip install 'spendguard-sdk[agent-framework]'`. The middleware
# contract (`from agent_framework import ChatMiddleware`) is GA as of
# the 1.x line; we cap below 2.x to fail-closed against a future
# breaking-change major.
agent-framework = [
  "agent-framework>=1.0,<2",
]
agt = [
  "agent-governance-toolkit>=3.4",
  "agent-os-kernel>=3.0",
]
# COV_D22 SLICE 1: Agno Python adapter extra. `agno` ships
# ``pre_hooks=[...]`` / ``post_hooks=[...]`` on ``Agent.run`` /
# ``arun`` starting with the 2.x line (agno 2.0+) ŌĆö see
# ``docs/specs/coverage/D22_agno/design.md``. The spec's ``>=1.0,<2.0``
# cap was authored against an early proposal; the public surface
# crystallised in the 2.x line (provider-agnostic callable hooks,
# ``inspect``-based signature injection that filters by parameter
# name). We pin ``>=2.0,<3.0`` so the extra fail-closes against a
# future breaking-change major. Hook callables MUST declare the
# literal parameter names Agno injects: ``(agent, run_input,
# run_context, session)`` for ``pre_hooks`` and ``(agent, run_output,
# run_context, session)`` for ``post_hooks`` ŌĆö see
# ``agno.agent._hooks.execute_pre_hooks`` and ``execute_post_hooks``.
agno = [
  "agno>=2.0,<3",
]
# COV_D23 SLICE 1: BeeAI Framework (IBM Research + Linux Foundation)
# Python adapter extra. ``beeai-framework`` ships ``Emitter`` with
# ``match(matcher, callback, options) -> CleanupFn`` and ``EventMeta``
# (``id``, ``name``, ``path``, ``created_at``, ``source``, ``creator``,
# ``context``, ``group_id``, ``trace``, ``data_type``) ŌĆö verified
# against the live wheel at
# ``beeai_framework/emitter/emitter.py:30-235``.
#
# DEVIATION-A vs spec ┬¦4 / design.md pyproject hint ``>=0.3,<1.0``:
# BeeAI's actual PyPI release line is ``0.1.x`` (latest ``0.1.81`` as
# of 2026-06-08). The ``>=0.3`` cap in design.md predates the
# project's first PyPI publish under the ``beeai-framework`` name;
# the IBM team is still on the 0.1.x series. We pin
# ``>=0.1.81,<0.2`` so the extra:
#   1. Fail-closes against a future breaking-change minor (0.2 line),
#   2. Floors at the version where ``Emitter.match`` returns a
#      ``CleanupFn`` and the agent-runtime ``BaseAgent.emitter``
#      cached_property is stable (verified at
#      ``beeai_framework/agents/base.py``).
beeai = [
  "beeai-framework>=0.1.81,<0.2",
]
# COV_D24 SLICE 1: AutoGen 0.4+ / AG2 Python adapter extra. Both
# lineages re-export ``autogen_core.models.ChatCompletionClient`` as
# the LLM abstraction. Operators pick the lineage they need
# (autogen-agentchat or ag2) ŌĆö the extra only resolves the shared
# ``autogen-core`` base so we never force one lineage on the other.
# Cap below 1.x to fail-closed against a future breaking-change major.
# See ``docs/specs/coverage/D24_autogen_ag2/design.md``.
autogen = [
  "autogen-core>=0.4,<1.0",
]
# COV_D25 SLICE 1: SmolAgents Python adapter extra. ``smolagents>=1.5``
# is the canonical floor: ``Model.generate(messages, ...)`` is the
# stable ABC entry point (legacy ``Model.__call__`` aliased through
# both versions ŌĆö review-standards ┬¦3.1). ``smolagents.models.
# ChatMessage`` + ``TokenUsage`` shape (``input_tokens`` /
# ``output_tokens``) is stable across the 1.x line. Cap below 2.x to
# fail-closed against a future breaking-change major. See
# ``docs/specs/coverage/D25_smolagents/design.md`` ┬¦5. Vendor backends
# (``huggingface_hub``, ``openai``, ``transformers``) are NOT pinned
# here ŌĆö smolagents itself declares those as appropriate sub-extras
# and the operator picks the inner Model class. The wrapper is
# composition-only and never instantiates a vendor SDK directly
# (review-standards ┬¦1.1 / ┬¦1.2). LiteLLMModel users are covered
# transitively by D12 (the LiteLLM SDK shim); the wrapper REFUSES to
# wrap a LiteLLMModel at construction time to prevent double-gating.
smolagents = [
  "smolagents>=1.5,<2",
]
# COV_D26 SLICE 1: Letta (ex-MemGPT) Python adapter extra. Letta ships
# provider-specific subclasses of ``letta.llm_api.llm_client_base.LLMClientBase``
# (OpenAIClient / AnthropicClient / GoogleAIClient / DeepSeekClient).
# SpendGuard subclasses the shared ABC and wraps an inner client; one
# wrapper covers all providers because gating sits at the ABC layer.
# Floor at 0.8 ŌĆö ``send_llm_request`` has been stable since 0.6.x but
# 0.8 is the first release with the normalized
# ``ChatCompletionResponse.usage.total_tokens`` field this adapter
# reads. Cap below 1.x to fail-closed against a future breaking-change
# major. See ``docs/specs/coverage/D26_letta/design.md``.
letta = [
  "letta>=0.8,<1.0",
]
# COV_D27 SLICE 1: LlamaIndex Python adapter extra. ``llama-index-core``
# >=0.12 ships the stable ``BaseCallbackHandler`` + ``CBEventType.LLM`` +
# ``EventPayload.MESSAGES`` / ``RESPONSE`` / ``SERIALIZED`` surface we
# gate against ŌĆö verified against 0.12.0ŌĆō0.12.50. The adapter resolves
# only ``llama-index-core``; operators install whichever provider
# sub-package (``llama-index-llms-openai``, ``-anthropic``, ``-gemini``,
# ``-bedrock-converse``) they actually use ŌĆö D27 covers them all via
# response-shape detection rather than per-vendor monkey-patching. The
# LiteLLM-routed path (``llama-index-llms-litellm``) is covered
# transitively by D12 (LiteLLM SDK shim); see design.md ┬¦1 + ┬¦3 for the
# two-path coverage matrix. No upper cap ŌĆö LlamaIndex's callback surface
# has been stable across the 0.12.x line (verified 0.12.0ŌĆō0.12.50). See
# ``docs/specs/coverage/D27_llamaindex/design.md`` ┬¦5.
llamaindex = [
  "llama-index-core>=0.12",
]
# COV_D28 SLICE 1: Atomic Agents (BrainBlend AI) + Instructor (Jason
# Liu) Python adapter extra. Atomic Agents is Pydantic-first; BaseAgent
# is constructed via ``BaseAgentConfig(client=<instructor>, ...)`` and
# at run time calls ``self.client.chat.completions.create_with_completion(
# response_model=..., ...)``. The only surface that observes every call
# ŌĆö including Instructor's validation-retry loop ŌĆö is the Instructor
# object itself, so SpendGuard wraps it via composition (see
# ``docs/specs/coverage/D28_atomic_agents/design.md`` ┬¦1 for the
# rejected raw-SDK alternative).
#
# DEVIATION-A vs spec design.md ┬¦8.2 pin ``atomic-agents>=1.0,<2.0``:
# the actual PyPI release line is 2.x (latest ``2.8.0`` as of
# 2026-06-08); there is no published 1.x line under the current
# ``atomic-agents`` package name. We pin ``>=2.0,<3`` so the extra:
#   1. Fail-closes against a future breaking-change major (3.x line),
#   2. Floors at the version where ``BaseAgent`` /
#      ``BaseAgentConfig(client=<instructor>)`` are GA ŌĆö verified
#      against ``atomic-agents==2.8.0`` from PyPI.
# Cap ``instructor>=1.5,<2.0`` per spec (1.9.x is current; 1.5 is the
# floor where ``create_with_completion`` is stable).
atomic-agents = [
  "atomic-agents>=2.0,<3",
  "instructor>=1.5,<2.0",
]
litellm = [
  # `[proxy]` sub-extra pulls fastapi/uvicorn/gunicorn that the
  # `litellm` CLI subprocess needs to boot. Without it,
  # `python -m litellm --config ...` ImportErrors at startup
  # (Slice 6 R1 Code Reviewer P0).
  "litellm[proxy]>=1.50,<2.0",
  # Trivy CVE-2026-42544: granian <2.7.4 can panic on malformed
  # WebSocket subprotocol headers. litellm[proxy] can resolve an older
  # granian without this direct floor.
  "granian>=2.7.4",
]
# COV_D11 SLICE 5 (review-standards ┬¦5.2 Blocker): NEW canonical extras
# name `litellm-guardrail` for the `CustomGuardrail`-based proxy plugin
# shipped in `spendguard.integrations.litellm_guardrail`. Floor is
# `litellm[proxy]>=1.55.0` since `CustomGuardrail` is the LiteLLM 1.55+
# surface ŌĆö earlier releases shipped the legacy `CustomLogger` path
# only (still wired by the `litellm` extra above, floor 1.50).
#
# Distinct from the legacy `litellm` extra above so existing operators
# on `pip install spendguard-sdk[litellm]` are NEVER force-upgraded
# past 1.50 (review-standards ┬¦5.2: "Existing `litellm` extra
# unchanged"). The two extras can coexist; operators wanting both
# surfaces install both.
litellm-guardrail = [
  "litellm[proxy]>=1.55,<2.0",
  # Carry forward the CVE-2026-42544 granian floor ŌĆö `litellm[proxy]`
  # can resolve an older granian without this direct pin.
  "granian>=2.7.4",
]
dev = [
  "grpcio-tools>=1.62,<1.72",
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "ruff>=0.5",
  "mypy>=1.10",
  "build>=1.2",
  "twine>=5",
]

[project.urls]
Homepage = "https://github.com/m24927605/agentic-spendguard"
Repository = "https://github.com/m24927605/agentic-spendguard"
Issues = "https://github.com/m24927605/agentic-spendguard/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/spendguard"]

# SLICE_12 Phase B: ensure vendored tokenizer JSON assets are
# explicitly forced into the wheel. hatchling treats *.json under
# `src/spendguard/data/` as package data automatically, but the
# force-include guards against future builds that exclude non-Python
# extensions or pyproject churn dropping the data path.
[tool.hatch.build.targets.wheel.force-include]
"src/spendguard/data/anthropic_claude3_tokenizer.json" = "spendguard/data/anthropic_claude3_tokenizer.json"
"src/spendguard/data/gemini_1_5_tokenizer.json" = "spendguard/data/gemini_1_5_tokenizer.json"

# Sdist explicit inclusion: pyproject's `tool.hatch.build` defaults
# include all of `src/`, but make the data dependency explicit so a
# user inspecting `pip download --no-binary` sees the assets.
[tool.hatch.build.targets.sdist]
include = [
  "src/spendguard/",
  "LICENSE_NOTICES.md",
  "README.md",
  "pyproject.toml",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "ANN", "ASYNC", "S"]
ignore = ["ANN101", "ANN102", "S101"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
