[package]
name = "spendguard-auth"
version = "0.1.0-alpha"
edition = "2021"
license = "Apache-2.0"
description = "Phase 5 GA hardening S17: shared OIDC JWT validation + Principal extraction. Consumed by dashboard and control_plane (and any future HTTP service that needs human-user auth)."

[lib]
name = "spendguard_auth"
path = "src/lib.rs"

[dependencies]
# JWT validation (RS256 / ES256 supported via the default-features="default" pulling in
# rustls-related crypto under the hood).
jsonwebtoken = "9"
# JWKS HTTP fetch.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
# Async + sync primitives.
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
parking_lot = "0.12"
async-trait = "0.1"

# axum middleware integration.
axum = { version = "0.7", features = ["json", "tokio"] }
http = "1"
tower = "0.5"

# Time + serialization.
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Errors / observability.
thiserror = "1"
anyhow = "1"
tracing = "0.1"
hex = "0.4"
sha2 = "0.10"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
ed25519-dalek = { version = "2", features = ["pkcs8", "pem", "rand_core"] }
rand = "0.8"
hex = "0.4"
