[package]
name = "spendguard-canonical-ingest"
version = "0.1.0-alpha"
edition = "2021"
license = "Apache-2.0"
description = "SpendGuard Canonical Ingest service: per-decision_id sequence enforcement + 3 storage classes"

[[bin]]
name = "spendguard-canonical-ingest"
path = "src/main.rs"

[dependencies]
tonic = { version = "0.12", features = ["tls", "transport", "gzip"] }
prost = "0.13"
prost-types = "0.13"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"

sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "uuid",
    "chrono",
    "json",
] }

ed25519-dalek = { version = "2", features = ["rand_core", "pkcs8"] }
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

uuid = { version = "1", features = ["v7", "v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
envy = "0.4"

# Phase 5 GA hardening S8: Verifier trait + LocalEd25519Verifier come
# from the shared signing crate.
spendguard-signing = { path = "../signing" }

# S8 metrics surface for Prometheus scraping.
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"

[build-dependencies]
tonic-build = "0.12"
prost-build = "0.13"

[dev-dependencies]
testcontainers = "0.23"
testcontainers-modules = { version = "0.11", features = ["postgres"] }
pretty_assertions = "1"
# verifier.rs unit tests use rand::rngs::OsRng for ed25519 keypairs.
rand = "0.8"
