[package]
name = "spendguard-cli"
version = "0.1.0-alpha"
edition = "2021"
license = "Apache-2.0"
description = "SpendGuard closed-CLI install bootstrap — root CA + leaf issuance, OS trust-store install, per-tool env emitter (D02)."

[[bin]]
name = "spendguard"
path = "src/main.rs"

[lib]
name = "spendguard_cli"
path = "src/lib.rs"

[dependencies]
# CLI scaffolding — locked at version 4 per design.md §10.
clap = { version = "4", features = ["derive", "env"] }

# CA + leaf issuance — already in workspace via output_predictor; share the same feature set.
rcgen = { version = "0.13", features = ["pem", "x509-parser"] }

# Validity arithmetic — rcgen re-exports `time` for OffsetDateTime + Duration::days(825).
time = { version = "0.3", features = ["macros"] }

# UUIDv7 → BigUint serial substrate (locked decision §9.2).
uuid = { version = "1", features = ["v4", "v7"] }
num-bigint = "0.4"

# Public InstallReport / UninstallReport / DoctorReport surface (design §8).
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Standard observability + error stack across SpendGuard services.
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"

# Root CA fingerprint for InstallReport.ca_fingerprint_sha256.
sha2 = "0.10"
hex = "0.4"

# SLICE 7 (COV_11): decode the PEM base64 body to DER so the doctor can
# SHA-256 the cert content (identity-equivalent to the install-time
# `ca::fingerprint_hex`). Deviation #4: the proxy probe surfaces TCP
# reachability only — a CA-validated TLS handshake leg is a tracked
# follow-up (needs a synchronous rustls client + a custom root store
# from the on-disk CA PEM). To avoid false confidence in the interim,
# the `Reachable` render is explicitly labelled "TCP-only liveness; TLS
# not verified" and the proxy's CA-trust is confirmed separately by the
# CA-fingerprint check (which verifies the trust-store entry).
base64 = "0.22"

# R2 fix per security review (M1): PKCS8 key buffers held as Zeroizing<String>
# per implementation.md §3 so they wipe on drop before allocator reuse.
zeroize = { version = "1", features = ["derive"] }

[dev-dependencies]
# Leaf-chains-to-root verification without an external openssl dependency.
x509-parser = "0.16"
tempfile = "3"
