[package]
name = "spendguard-control-plane"
version = "0.1.0-alpha"
edition = "2021"
license = "Apache-2.0"
description = "SpendGuard SaaS control plane MVP — REST API for tenant + budget + contract provisioning."

[[bin]]
name = "spendguard-control-plane"
path = "src/main.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
anyhow = "1"
envy = "0.4"
sha2 = "0.10"
hex = "0.4"

# Phase 5 GA hardening S17: shared OIDC JWT validator + middleware.
spendguard-auth = { path = "../auth" }

# Round-2 #11: Prometheus /metrics endpoint. Reuse the same hyper /
# hyper-util / http-body-util triple as ledger + sidecar so the render
# server pattern is identical across services.
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
