[package]
name = "spendguard-cost-advisor"
version = "0.0.1-alpha"
edition = "2021"
license = "Apache-2.0"
description = "SpendGuard Cost Advisor — rule engine that reads the audit chain and proposes contract DSL patches via the existing control_plane approval queue (spec: docs/specs/cost-advisor-spec.md)."

[lib]
name = "spendguard_cost_advisor"
path = "src/lib.rs"

[[bin]]
name = "spendguard-advise"
path = "src/bin/spendguard_advise.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
bigdecimal = "0.4"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tonic = { version = "0.12", features = ["transport"] }
prost = "0.13"
prost-types = "0.13"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
async-trait = "0.1"

sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "uuid",
    "chrono",
    "json",
    "bigdecimal",
] }

sha2 = "0.10"
hex = "0.4"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

uuid = { version = "1", features = ["v7", "v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

thiserror = "1"
anyhow = "1"
tracing = "0.1"

[build-dependencies]
tonic-build = "0.12"
prost-build = "0.13"
