[package]
name = "spendguard-dashboard"
version = "0.1.0-alpha"
edition = "2021"
license = "Apache-2.0"
description = "SpendGuard operator dashboard MVP — read-only views over ledger + audit chain."

[[bin]]
name = "spendguard-dashboard"
path = "src/main.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "macros", "bigdecimal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
anyhow = "1"
envy = "0.4"

# Phase 5 GA hardening S17: shared OIDC JWT validator + middleware.
spendguard-auth = { path = "../auth" }

# Phase 5 GA hardening S9: audit export needs sha256 hashing + hex
# encoding for the batch manifest.
sha2 = "0.10"
hex = "0.4"
