[package]
name = "spendguard-doctor"
version = "0.1.0-alpha"
edition = "2021"
license = "Apache-2.0"
description = "Phase 5 GA hardening S21: spendguard doctor CLI. Diagnoses environment + integration failures before a customer runs a real agent."

[[bin]]
name = "spendguard-doctor"
path = "src/main.rs"

[lib]
name = "spendguard_doctor"
path = "src/lib.rs"

[dependencies]

# Direct rustls dep so main() can call CryptoProvider::install_default()
rustls = "0.23"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "uuid",
    "chrono",
    "json",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }

# Errors / observability.
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# CLI args.
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
tempfile = "3"
