[package]
name = "spendguard-egress-proxy"
version = "0.1.0-alpha"
edition = "2021"
license = "Apache-2.0"
description = "Auto-instrument HTTP proxy for SpendGuard: drop-in OpenAI-compatible endpoint that gates LLM calls via the sidecar before forwarding. See docs/specs/auto-instrument-egress-proxy-spec.md."

[[bin]]
name = "spendguard-egress-proxy"
path = "src/main.rs"

[dependencies]
# HTTP server
axum = "0.7"
tower-http = { version = "0.6", features = ["trace"] }
tower = "0.5"

# Async runtime
tokio = { version = "1", features = ["full"] }

# rustls — must install_default before any TLS use (F1 backport pattern)
rustls = "0.23"

# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Errors
anyhow = "1"
thiserror = "1"

# JSON
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Shared crates
spendguard-ids = { path = "../ids" }

# SLICE_10 Phase A: tokenizer library form for in-process hot-path tokenize.
# Spec §10.1 SLO p99 < 1ms; gRPC service form (services/tokenizer/) is too
# slow for the per-request hot path so we link the library directly per
# tokenizer-service-spec-v1alpha1.md §2.1(b).
spendguard-tokenizer = { path = "../../crates/spendguard-tokenizer" }

# Synchronous big-int / numeric helpers used when summing claim amounts
# (SLICE_10 Phase B run_cost_projector input).
num-bigint = "0.4"

# Outbound HTTP client (forward to OpenAI). rustls backend matches the
# main() install_default() pattern; no native-tls to avoid OpenSSL dep.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }

# Slice 4a: sidecar UDS gRPC client (mirrors services/ttl_sweeper)
tonic = { version = "0.12", features = ["transport", "gzip"] }
prost = "0.13"
prost-types = "0.13"
hyper-util = { version = "0.1", features = ["tokio"] }
async-stream = "0.3"
uuid = { version = "1", features = ["v7", "v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
arc-swap = "1"
blake2 = "0.10"

# Config
envy = "0.4"

# v0.2 SSE streaming pass-through
futures-util = "0.3"
bytes = "1"

# SLICE_11 — provider routing table (regex inbound path matching) +
# Lazy<Vec<ProviderConfig>> singletons. Both already in tree via
# spendguard-tokenizer; egress_proxy adds them direct so the routing
# table compiles once at process start.
regex = "1"
once_cell = "1"

[build-dependencies]
tonic-build = "0.12"
prost-build = "0.13"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
